<resources>

    <!--region Strings to avoid boilerplate code-->
    <string name="math_quiz_pref_file_key" translatable="false">MathQuizFragment Pref</string>
    <string name="main_pref_file_key" translatable="false">MainActivity Pref</string>
    <string name="saved_mute_key" translatable="false">mute</string>
    <string name="saved_lang_key" translatable="false">lang</string>

    <string name="multiplication" translatable="false">X</string>
    <string name="division" translatable="false">/</string>
    <string name="power" translatable="false">^</string>
    <string name="hint" translatable="false">###</string>

    <string name="hebrew" translatable="false">עברית</string>
    <string name="english" translatable="false">English</string>
    <!--endregion Strings to avoid boilerplate code-->

    <string name="app_name">Psycho Quiz</string>
    <string name="english_word">English</string>
    <string name="math">Math</string>
    <string name="practice">Practice</string>
    <string name="letter">Letter</string>
    <string name="search_title">Search</string>
    <string name="search_a_word_here">Search a word here</string>
    <string name="search_word_hint">Search a word</string>
    <string name="display_all_words">Display All Words</string>
    <string name="no_results">No Results</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="quiz_headline">The meaning of the word \"%1$s\":</string>
    <string name="error_message">Couldn\'t Load Page %1$s</string>
    <string name="settings">Settings</string>
    <string name="choose_letters">Choose Letters</string>
    <string name="choose_word_types">Choose Word Types</string>
    <string name="restart">Restart</string>
    <string name="logo">logo</string>
    <string name="quiz_result">Quiz Results</string>
    <string name="well_done">Well Done!</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="show_translation">Show Translation</string>
    <string name="hide_translation">Hide Translation</string>
    <string name="unknown_dialog_title">Do you feel like you already know the word \"%1$s\"?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="timer">Timer</string>
    <string name="chapter_title">Chapter %1$d/%2$d</string>
    <string name="with_essay">With Essay</string>
    <string name="essay">Essay</string>
    <string name="chapters">Chapters</string>
    <string name="change_language">Change Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="mute">Mute</string>
    <string name="refresh_dialog_title">Quiz Finished! Restart?</string>
    <string name="invalid_settings">Couldn\'t find any words to fit your settings</string>
    <string name="changes_detected">Word changes detected.\nRecommend refreshing.</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="swipe_down_to_refresh">Swipe Down To Refresh</string>
    <string name="neutral_snackBar">Word is now neutral</string>
    <string name="known_snackBar">Word is now Known</string>
    <string name="unknown_snackBar">Word is now unknown</string>
    <string name="favorite_snackBar">Word is now favorite</string>

</resources>