<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.MathFragment">

    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division" />

    <Button
        android:id="@+id/btn_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power" />

</androidx.appcompat.widget.LinearLayoutCompat>