<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TimerActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_chapter"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Chapter 2" />

        <TextView
            android:id="@+id/tv_countdown"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="100sp"
            tools:text="00:00" />

        <!--region Start and Reset Buttons-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:visibility="gone"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--endregion Start and Reset Buttons-->

        <!--region Essay Setting-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_essay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_essay" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_essay_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--endregion Essay Setting-->

        <!--region Chapter Setting-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_chapters_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapters" />

            <Spinner
                android:id="@+id/spinner_chapters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--endregion Chapter Setting-->

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>